feat #78 依赖版本变更